2005-07-05  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/menus.c: Demonstrate vertical menubars.

	* gtk/gtk.symbols:
	* gtk/gtkaboutdialog.[hc]: Add a wrap-license property
	with getter and setter.  (#165012, Christian Rose,
	based on a patch by Christian Persch)

2005-07-05  Matthias Clasen  <mclasen@redhat.com>

	* gdk/Makefile.am: Distribute the keyname-table.h header 
	and the files that are used to construct it.  (#309421,
	J. Ali Harlow)

2005-07-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenubar.c (gtk_menu_bar_set_pack_direction) 
	(gtk_menu_bar_set_child_pack_direction): Queue a resize
	on the contained menuitems as well.  

	* demos/gtk-demo/appwindow.c: Break some overlong lines. 

2005-07-03  Hans Breuer  <hans@breuer.org>

	* **/makefile.msc[.in] : updated
	* gtk/gtkiconcache.c : <io.h> for open()
	* gtk/gtkstyle.c : use G_PI instead of M_PI

	* gdk/win32/gdkcursor-win32.c : implement gdk_cursor_new_from_name()
	by mapping the lower case win32 api name to the respective cursor.
	E.g. pass "wait" to get the IDC_WAIT cursor. Also allows to load
	cursors from named resources in the executable.
	(gdk_cursor_get_image) : just return NULL for now.

	* gdk/win32/gdkgeometry-win32.c : implement gdk_window_move_region()
	by delegation to ScollWindowEx(), untested.

	* gdk/win32/gdkwindow-win32.c : stub for gdk_window_set_urgency_hint()

2005-07-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimagemenuitem.c: Hmm, when committing my vertical
	menubar patch, I forgot the GtkImageMenuItem changes. And I
	managed to do 2 releases without noticing that...

	* gtk/gtksettings.c (gtk_settings_class_init): Correct the 
	blurb for the icon-sizes setting. String change.  
	(#309355, Benjamin Berg)

2005-07-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version.

	* === Released 2.7.1 ===
	
	* NEWS: Updates

2005-07-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilesel.c (cmpl_init_state): Prevent an infinite