@@ -1,3 +1,9 @@
+2005-07-05  Kristian Rietveld  <kris@gtk.org>
+
+	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): in the
+	'main' expose loop, add back the calls to _set_cell_data
+	removed earlier. (#309221, Matthias Clasen).
+
 2005-07-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* demos/gtk-demo/menus.c: Demonstrate vertical menubars.
